[metadata]
name = ezmsg-unicorn
version = attr:ezmsg.unicorn.__version__
author = [Miguel E. Wimbish, Griffin W. Milsap]
author_email = [miguel.wimbish@jhuapl.edu, griffin.milsap@jhuapl.edu]
description = g.tec Unicorn integration for ezmsg
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires = 
    ezmsg>=3.3.0

[options.extras_require]
dashboard = 
    ezmsg-sigproc
	ezmsg-panel @ https://github.com/griffinmilsap/ezmsg-panel/archive/refs/tags/v0.2.0.tar.gz#egg=ezmsg-panel
    panel
test = 
    pytest
    pytest-cov
